--- a/.github/workflows/myDevOpsLearn.yml
+++ b/.github/workflows/myDevOpsLearn.yml
@@ -17,7 +17,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.9", "3.10", "3.11"]
+        #python-version: ["3.9", "3.10", "3.11"]
+        python-version: "3.11"
 
     steps:
     - uses: actions/checkout@v4
