--- a/.github/workflows/myDevOpsLearn.yml
+++ b/.github/workflows/myDevOpsLearn.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       fail-fast: true
-      matrix:
+      #matrix:
         #python-version: ["3.9", "3.10", "3.11"]
         python-version: '3.11'
 
@@ -25,7 +25,8 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        #python-version: ${{ matrix.python-version }}
+        python-version: '3.12'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
