--- a/.github/workflows/myDevOpsLearn.yml
+++ b/.github/workflows/myDevOpsLearn.yml
@@ -16,17 +16,16 @@ jobs:
     runs-on: self-hosted
     strategy:
       fail-fast: true
-      #matrix:
-        #python-version: ["3.9", "3.10", "3.11"]
-        python-version: '3.11'
+      matrix:
+        #python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
 
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        #python-version: ${{ matrix.python-version }}
-        python-version: '3.12'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
