--- a/.github/workflows/myDevOpsLearn.yml
+++ b/.github/workflows/myDevOpsLearn.yml
@@ -27,11 +27,19 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
+    # Log into Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+	username:${{ secrets.DOCKERHUB_USERNAME }}
+	password:${{ secrets.DOCKERHUB_TOKEN }}
+   
     # Setup and build docker image from dockerfile
     - name: Build myHealthAPI Docker image
       run: |
         echo "Building Docker image using Python $PYTHON_VERSION..."
         docker build --build-arg PYTHON_VERSION=$PYTHON_VERSION -t $IMAGE_NAME:$IMAGE_TAG .
+
 
     # Adding a wait before linting
     - name: Wait for environment to stabilize
@@ -48,6 +56,13 @@ jobs:
     - name: Run tests with Docker Compose
       run: |
         docker compose -f docker-compose.yml up --build --abort-on-container-exit --exit-code-from tests
+
+    # Push image to Docker Hub
+    - name: Push image to Docker Hub
+      run: |
+	echo "Tagging and pushing image to Docker Hubba..."
+	docker tag $IMAGE_NAME:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME
+	docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
 
 # Hopefully this should do the job. Trying things out again :(
 
