Attempt 3 - updating githubactions yaml

--- a/.github/workflows/myDevOpsLearn.yml
+++ b/.github/workflows/myDevOpsLearn.yml
@@ -85,6 +85,11 @@ jobs:
         echo "Applying k8s"
         kubectl apply -k k8s/
 
+    # Expose app via minikube if you have used loadbalancer config
+    - name: Open app in a browser after exposing minikube
+      run: |
+        minikube service myhealthapi-service -n myhealthapi
+
     # Display deployment data
     - name: Deployment information
       run: |
