Attempt 5 - exposing service was too much work

--- a/.github/workflows/myDevOpsLearn.yml
+++ b/.github/workflows/myDevOpsLearn.yml
@@ -92,10 +92,10 @@ jobs:
         kubectl describe service myhealthapi-service -n myhealthapi
         kubectl get pods -n myhealthapi
 
-    # Expose app via minikube if you have used loadbalancer config
-    - name: Open app in a browser after exposing minikube
-      run: |
-        minikube service myhealthapi-service -n myhealthapi
+    # # Expose app via minikube if you have used loadbalancer config
+    # - name: Open app in a browser after exposing minikube
+    #   run: |
+    #     minikube service myhealthapi-service -n myhealthapi
 
 # Hopefully this should do the job. Trying things out again :(
 
